--- a/.github/workflows/rebase-bf-patch.yml
+++ b/.github/workflows/rebase-bf-patch.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Check-BF-Releases
+name: Rebase-BF-Patch
 
 # Controls when the workflow will run
 on:
@@ -13,12 +13,12 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  check:
+  rebase-patch:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Run a multi-line script
+      - name: Rebase script
         run: |
           set -uex
           set -o pipefail
@@ -44,6 +44,8 @@ jobs:
           TAG=${myarray[0]}
           mkdir -p work
           cd work
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
           git clone -o fork -b "${BRANCH_NAME}" https://github.com/alteman/betaflight
           cd betaflight
           COMMIT=$(git rev-list -n 1 "$BRANCH_NAME")
