--- a/.github/workflows/rebase-bf-patch.yml
+++ b/.github/workflows/rebase-bf-patch.yml
@@ -16,6 +16,7 @@ jobs:
   rebase-patch:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: secrets
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Rebase script
