--- a/.github/workflows/build-arterytek-openocd.yml
+++ b/.github/workflows/build-arterytek-openocd.yml
@@ -30,6 +30,7 @@ jobs:
           ./configure --enable-readline --prefix=$HOME/macports --with-no-root-privileges
           make && make install
           echo ~/macports/bin >> $GITHUB_PATH
+          export PATH=$PATH:~/macports/bin
 
           port version
 
