--- a/.github/workflows/build-arterytek-openocd.yml
+++ b/.github/workflows/build-arterytek-openocd.yml
@@ -50,7 +50,6 @@ jobs:
 
       - name: Prepare build artifacts
         run: |
-          cd $HOME
           mkdir -p dist/openocd
           pushd dist/openocd
           mkdir -p bin lib share
@@ -59,6 +58,7 @@ jobs:
           cp -r ${macports}/share/openocd share/
           cd ..
           tar cjf openocd.tar.bz2 openocd
+          echo Created archive $(readlink -f openocd.tar.bz2)
           popd
         env:
           macports: ${{ runner.temp }}/macports
